Minor fix in calendar CSS to align calendar views.

--- a/www/resources/calendar.css
+++ b/www/resources/calendar.css
@@ -161,7 +161,8 @@
 }
 
 #events {
-         /* margin-left: 250px; */
+         margin-left: 250px;
+         margin-right: 0px;
          margin-bottom: 0px;
 }
 
